Added basic skeleton docs for AuthController
